Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-28125

Dragged text not moved when dropped onto another editor

XMLWordPrintable

    • c58f41face (qt-creator/qt-creator/8.0) c58f41face (qt-creator/qt-creator/master) c58f41face (qt-creator/qt-creator/9.0) c58f41face (qt-creator/qt-creator/qds-3.7)

      Text is always copied when dragged from one editor to another. It should be moved instead of copied unless a keyboard modifier key is held (e.g. Ctrl on Windows). The mouse cursor should indicate the operation that will take place. It currently always indicates move even though it always actually copies.

      Steps to reproduce
      1. Open one text file.
      2. In another split/editor, open a second text file.
      3. Select some text in the first editor and then drag and drop it into the second editor.
      Expected results

      The selected text should be removed from the first editor and inserted into the second editor.

      Actual results

      The selected text is copied into the second editor and now appears in both.

        For Gerrit Dashboard: QTCREATORBUG-28125
        # Subject Branch Project Status CR V

            davschul David Schulz
            ryan.cuthbertson Ryan Cuthbertson
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes