Editor: accept drop actions

In order to remove the selected text of another editor widget when
dragging text from one editor to another the drop event needs to be
accepted.

Fixes: QTCREATORBUG-28125
Change-Id: I8333fe096baf589e5669fc43370fc3519c72bb2d
Reviewed-by: Christian Stenger <christian.stenger@qt.io>
Reviewed-by: Eike Ziller <eike.ziller@qt.io>